# satellite_constellation_viewer

./: CMakeLists.txt  main.cpp  satellite_constellation_viewer.kdev4
.kdev4/: satellite_constellation_viewer.kdev4
